# librdkafka

./: .appveyor.yml  .astylerc  .dockerignore  .doozer.json  .eslintrc.js  .formatignore  .gitignore  .gitmodules  .jshintignore  .jshintrc  .npmignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  CPackProjectConfig.cmake  DECOMPRESSION_FIX_COMPLETE.md  Dockerfile  Doxyfile  HOW_TO_UPDATE.md  INTRODUCTION.md  LICENCES.rtf  LICENSE.FindZstd  LICENSE.heap-js  LICENSE.kafkajs  LICENSE.murmur2  LICENSE.node-rdkafka  LICENSE.randr  LICENSE.snappy  LICENSE.trex  LICENSE.txt  LICENSE.xxhash  LICENSES.txt  MIGRATION.md  Makefile  Makefile.schemaregistry  QUICKSTART.md  README.md  (+68 more)
.circleci/: config.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.semaphore/: build-docker-alpine.sh  build-docker-debian.sh  build-docker.sh  docker_run_with_volumes.sh  post_install.yml  project.yml  project_public.yml  run-all-tests.yml  run-asan-tests.yml  run-k2-tests.yml  run-sasl-tests.yml  run-share-consumer-metric-e2e-test.yml  run-share-consumer-telemetry-verification.yml  run-share-perf-comparison.yml  run-single-broker-tests.yml  run-tests-cloud.yml  run-tsan-tests.yml  run-valgrind-tests.yml  semaphore-integration.yml  semaphore.yml  verify-linux-packages.yml
RdKafka/: HandleImpl.cpp  rdkafkacpp.h  rdkafkacpp_int.h
bench/: consumer-raw-rdkafka.js  consumer-subscribe.js  kafka-consumer-stream.js  producer-raw-rdkafka.js  producer-rdkafka.js
c++/: rdkafka.h
ci/: librdkafka-defs-generator.js  prepublish.js  update-version.js
debian/: changelog  control  copyright  docs  gbp.conf  librdkafka-dev.install  librdkafka1.install  librdkafka1.symbols  rules
dekregistry/: dekregistry-client.ts  mock-dekregistry-client.ts
examples/: .gitignore  CMakeLists.txt  Makefile  README.md  abort_transaction.c  admin.c  alter_client_quotas.c  alter_consumer_group_offsets.c  alter_group_offsets.c  consumer-confluent-cloud.js  consumer.c  consumer.js  consumer_custom_assignor.c  consumer_group_describe.c  delete_records.c  describe_client_quotas.c  describe_cluster  describe_cluster.c  describe_consumer_groups.c  describe_groups.c  describe_producers.c  describe_topics  describe_topics.c  describe_transactions.c  docker-alpine.md  elect_leaders  elect_leaders.c  eos.js  idempotent_producer.c  incremental_alter_configs  incremental_alter_configs.c  kafkatest_verifiable_client.cpp  list_consumer_group_offsets.c  list_consumer_groups.c  list_group_offsets.c  list_groups.c  list_offsets  list_offsets.c  list_transactions.c  metadata.md  (+38 more)
examples/kafkajs/: admin.js  consumer-confluent-cloud.js  consumer.js  eos.js  oauthbearer_oidc_azure_imds.js  producer-confluent-cloud.js  producer.js  sr.js
examples/kafkajs/admin/: create-topics.js  delete-groups.js  delete-topic-records.js  delete-topics.js  dependent-admin.js  describe-groups.js  fetch-offsets.js  fetch-topic-metadata.js  fetch-topic-offsets-by-timestamp.js  fetch-topic-offsets.js  list-groups.js  list-topics.js
examples/kafkajs/oauthbearer_calback_authentication/: oauthbearer_callback_authentication.js  package-lock.json  package.json
examples/node-rdkafka/: consumer-confluent-cloud.md  consumer-flow.md  consumer.md  dependent-admin.js  docker-alpine.md  high-level-producer-confluent-cloud.md  metadata.md  producer-cluster.md  producer.md
examples/node-rdkafka/oauthbearer_callback_authentication/: oauthbearer_callback_authentication.js  package-lock.json  package.json
examples/performance/: README.md  package.json  performance-consolidated.js  performance-primitives-kafkajs.js  performance-primitives.js  performance-promisified.js
examples/typescript/: kafkajs.ts  node-rdkafka.ts  package-lock.json  package.json
lib/: admin.js  (+11 more)
src-cpp/: CMakeLists.txt  ConfImpl.cpp  ConsumerImpl.cpp  HandleImpl.cpp  HeadersImpl.cpp  KafkaConsumerImpl.cpp  Makefile  MessageImpl.cpp  MetadataImpl.cpp  ProducerImpl.cpp  QueueImpl.cpp  RdKafka.cpp  TopicImpl.cpp  TopicPartitionImpl.cpp  rdkafkacpp.h  rdkafkacpp_int.h
tests/: .gitignore  0000-unittests.c  0001-multiobj.c  0002-msgtimeout.c  0002-unkpart.c  0003-msgmaxsize.c  0004-conf.c  0005-order.c  0006-symbols.c  0007-autotopic.c  0008-produce.c  0008-reqacks.c  0009-mock_cluster.c  0010-enforcereqacks.c  0011-produce_batch.c  0012-produce_consume.c  0013-null-msgs.c  0014-reconsume-191.c  0015-offset_seeks.c  0016-assign_partition.c  0016-client_swname.c  0016-subscribe_partition.c  0017-compression.c  0018-cgrp_term.c  0019-describe_groups.c  0019-list_groups.c  0020-destroy_hang.c  0021-rkt_destroy.c  0022-consume_batch.c  0025-timers.c  0026-consume_pause.c  0028-long_topicnames.c  0029-assign_offset.c  0030-offset_commit.c  0031-get_offsets.c  0033-regex_subscribe.c  0034-offset_reset.c  0035-api_version.c  0036-partial_fetch.c  0037-destroy_hang_local.c  (+263 more)
tests/chaos/: .gitignore  Makefile  README.md  chaos.py  chaos_until_fail.sh  share_consume_verify.c  share_consume_verify.py
tests/fixtures/ssl/: .gitignore  Makefile  README.md  client.certificate.pem  client.key  client.keystore.intermediate.p12  client.keystore.p12  client2.certificate.intermediate.pem  client2.certificate.pem  client2.intermediate.key  client2.key  create_keys.sh
tests/fixtures/ssl/fips_testing/: client.keystore.intermediate.p12  client.keystore.p12  client2.certificate.intermediate.pem  client2.certificate.pem  client2.intermediate.key  client2.key  create_keys.sh
tests/fuzzers/: Makefile  README.md  fuzz_conf.c  fuzz_conf.dict  fuzz_msg.c  fuzz_protocol.c  fuzz_regex.c  fuzz_telemetry.c
tests/interceptor_test/: CMakeLists.txt  Makefile  interceptor_test.c
tests/java/: Makefile  TransactionProducerCli.java  run-class.sh
tests/kafkatest/verifiable_consumer/: verifiable_consumer.c
tests/plugin_test/: Makefile  plugin_test.c
tests/scenarios/: default.json
tests/share_telemetry_verify/: share-otel-collector-config.yaml
tests/tools/benchmark/: README.md  compression.sh
tests/tools/stats/: graph.py  toppar_to_csv.sh
(+828 files in other folders)
